--- a/app/src/main/res/drawable/third_prize_background.xml
+++ b/app/src/main/res/drawable/third_prize_background.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="ring"
-    android:thicknessRatio="30"
+    android:thicknessRatio="20"
+    android:innerRadiusRatio="2.5"
     android:useLevel="false">
     <solid android:color="@color/purple_500"/>
-    <padding android:left="8dp"
-        android:right="8dp"
-        android:top="8dp"
-        android:bottom="8dp"/>
 
 </shape>
