--- a/app/src/main/res/layout/session_item_layout.xml
+++ b/app/src/main/res/layout/session_item_layout.xml
@@ -3,8 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="16dp"
     android:layout_marginEnd="8dp"
+    android:layout_marginTop="16dp"
+    android:padding="4dp"
+    android:background="#E6E2E2"
+
     android:orientation="vertical">
 
     <RelativeLayout
