--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="android:layout_margin">1dp</item>
     </style>
 
     <style name="first_prize_number_text_view" parent="android:Widget.TextView">
@@ -25,6 +26,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="android:layout_margin">1dp</item>
     </style>
 
     <style name="second_prize_number_text_view" parent="android:Widget.TextView">
@@ -32,7 +34,8 @@
         <item name="android:background">@drawable/second_prize_background</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:layout_margin">1dp</item>
     </style>
 
     <style name="third_prize_number_text_view" parent="android:Widget.TextView">
@@ -41,5 +44,6 @@
         <item name="android:textColor">@color/teal_200</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="android:layout_margin">1dp</item>
     </style>
 </resources>
