--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.MainActivity">
-
-    <androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:tools="http://schemas.android.com/tools">
+    
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
-        <TextView
-            android:id="@+id/month_picker_label"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:text="@string/month_picker_label"
-            android:textStyle="bold"
-            android:layout_gravity="center_vertical"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:gravity="center"
-            />
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/month_picker_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:spinnerMode="dialog"
-            android:gravity="center"
-            />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".activity.MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-</LinearLayout>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp">
+            <TextView
+                android:id="@+id/month_picker_label"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="@string/month_picker_label"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                android:gravity="center"
+                />
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/month_picker_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:spinnerMode="dialog"
+                android:gravity="center"
+                />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+    </LinearLayout>
+</layout>
